--- a/index.html
+++ b/index.html
@@ -20,3 +20,4 @@
   <link rel="stylesheet" href="style.css">
   <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
   <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
+  <script src="main.js"></script>
